log

Thu 14 Mar 2024 02:44:59 PM UTC: 
 exercises.c | 52 +++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 45 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c:30:1: error: expected identifier or ‘(’ before ‘{’ token
   30 | {
      | ^
exercises.c:83:1: error: expected identifier or ‘(’ before ‘{’ token
   83 | {
      | ^
Compilation failed
defccce
Thu 14 Mar 2024 02:46:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   38 |   return arr;
      |          ^~~
exercises.c:29:6: note: declared here
   29 | void reverseArray(int arr[], int size)
      |      ^~~~~~~~~~~~
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp = 0;
      |       ^~~~
exercises.c: At top level:
exercises.c:83:1: error: expected identifier or ‘(’ before ‘{’ token
   83 | {
      | ^
cc1: all warnings being treated as errors
Compilation failed
9601204
Thu 14 Mar 2024 02:46:29 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp = 0;
      |       ^~~~
exercises.c: At top level:
exercises.c:82:1: error: expected identifier or ‘(’ before ‘{’ token
   82 | {
      | ^
cc1: all warnings being treated as errors
Compilation failed
56de6ae
Thu 14 Mar 2024 02:47:13 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:81:1: error: expected identifier or ‘(’ before ‘{’ token
   81 | {
      | ^
Compilation failed
e82c69c
Thu 14 Mar 2024 02:47:26 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|2
Test Merged Sort Arrays...
9a64db4
Thu 14 Mar 2024 02:48:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
Test Merged Sort Arrays...
5edaec8
Thu 14 Mar 2024 02:48:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:17: error: array subscript is not an integer
   54 |         nuevoArr[newSize] = arr[i];
      |                 ^
Compilation failed
59a53b7
Thu 14 Mar 2024 02:48:58 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|2
Test Merged Sort Arrays...
f112fc1
Thu 14 Mar 2024 02:49:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
Test Merged Sort Arrays...
a3247c3
Thu 14 Mar 2024 02:57:32 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8e32819
Thu 14 Mar 2024 02:58:55 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 10/70
25420f0
Thu 14 Mar 2024 03:02:21 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
c9efd9c
Thu 14 Mar 2024 03:04:11 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 10/70
313069a
Thu 14 Mar 2024 03:05:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
90d4653
Thu 14 Mar 2024 03:05:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
b18a76f
Thu 14 Mar 2024 03:08:41 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘contador’ [-Werror=unused-variable]
   31 |   int contador = 0;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c1635fa
Thu 14 Mar 2024 03:08:50 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
9714fed
Thu 14 Mar 2024 03:09:37 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
38743ab
Thu 14 Mar 2024 03:10:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
0bb7b61
Thu 14 Mar 2024 03:11:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:59:37: error: invalid operands to binary * (have ‘long unsigned int’ and ‘int *’)
   59 |       nuevoArr = malloc(sizeof(int) * newSize);
      |                                     ^
Compilation failed
ddd8a09
Thu 14 Mar 2024 03:11:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b76724b
